--- a/style.css
+++ b/style.css
@@ -20,7 +20,13 @@ body {
 }
 
 .stats-container {
-    display: flex;
+    display: flex; 
+    align-items : center;  
+}
+
+.stats-container:hover { 
+    cursor: pointer; 
+    box-shadow: 0 0 30px lightblue;  
 }
 
 .stats-card {
@@ -44,14 +50,16 @@ body {
 
 .game-img {
     width: 100%;
+    height: 200px; 
     border-radius: 5px;
     box-shadow: 0 0 10px #FFFFFF;
+    object-fit: cover; 
 }
 
 .game-card {
     background-color: #FFFFFF;
-    padding: 1%;
-    margin: 1%;
+    padding: 10px;
+    margin: 10px;
     width: 300px;
     text-align: center;
     border-radius: 7px;
